rust/src/parser.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub const TS_ANY: i32 = -2;
pub const TS_START: i32 = -1;
pub const TS_END: i32 = 0;
pub const TS_SPACE: i32 = 1;
pub const TS_WORD: i32 = 2;
pub const TS_COMPOUND: i32 = 3;
pub const TS_PUNCTSTRONG: i32 = 4;
pub const TS_PUNCT: i32 = 5;
pub const TS_NUMBER: i32 = 6;
pub const TS_URL: i32 = 7;
pub const TS_CITEKEY: i32 = 8;
pub const TS_EMOTICON: i32 = 9;
pub const TS_EMOJI: i32 = 10;
pub const TS_ABBREV: i32 = 11;
pub const TS_CTRL: i32 = 12;
pub const TS_ORDINAL: i32 = 13;
pub const TS_NEWLINE: i32 = 14;
pub const TS_SPACESIGN: i32 = 15;
pub const TS_LASTNUM: i32 = 15;
pub type jchar = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Token {
    pub index: ::std::os::raw::c_int,
    pub length: ::std::os::raw::c_int,
    pub byte_index: ::std::os::raw::c_int,
    pub byte_length: ::std::os::raw::c_int,
    pub line_number: ::std::os::raw::c_int,
    pub kind: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Token"][::std::mem::size_of::<Token>() - 24usize];
    ["Alignment of Token"][::std::mem::align_of::<Token>() - 4usize];
    ["Offset of field: Token::index"][::std::mem::offset_of!(Token, index) - 0usize];
    ["Offset of field: Token::length"][::std::mem::offset_of!(Token, length) - 4usize];
    ["Offset of field: Token::byte_index"][::std::mem::offset_of!(Token, byte_index) - 8usize];
    ["Offset of field: Token::byte_length"][::std::mem::offset_of!(Token, byte_length) - 12usize];
    ["Offset of field: Token::line_number"][::std::mem::offset_of!(Token, line_number) - 16usize];
    ["Offset of field: Token::kind"][::std::mem::offset_of!(Token, kind) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TParser {
    str_: *mut jchar,
    strlen: ::std::os::raw::c_int,
    pos: ::std::os::raw::c_int,
    line_number: ::std::os::raw::c_int,
    _str: *mut ::std::os::raw::c_char,
    _mb: ::std::os::raw::c_int,
    _pos: ::std::os::raw::c_int,
    _len: ::std::os::raw::c_int,
    next: ::std::os::raw::c_int,
    prev: ::std::os::raw::c_int,
    pub token: Token,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of TParser"][::std::mem::size_of::<TParser>() - 80usize];
    ["Alignment of TParser"][::std::mem::align_of::<TParser>() - 8usize];
    ["Offset of field: TParser::str_"][::std::mem::offset_of!(TParser, str_) - 0usize];
    ["Offset of field: TParser::strlen"][::std::mem::offset_of!(TParser, strlen) - 8usize];
    ["Offset of field: TParser::pos"][::std::mem::offset_of!(TParser, pos) - 12usize];
    ["Offset of field: TParser::line_number"]
        [::std::mem::offset_of!(TParser, line_number) - 16usize];
    ["Offset of field: TParser::_str"][::std::mem::offset_of!(TParser, _str) - 24usize];
    ["Offset of field: TParser::_mb"][::std::mem::offset_of!(TParser, _mb) - 32usize];
    ["Offset of field: TParser::_pos"][::std::mem::offset_of!(TParser, _pos) - 36usize];
    ["Offset of field: TParser::_len"][::std::mem::offset_of!(TParser, _len) - 40usize];
    ["Offset of field: TParser::next"][::std::mem::offset_of!(TParser, next) - 44usize];
    ["Offset of field: TParser::prev"][::std::mem::offset_of!(TParser, prev) - 48usize];
    ["Offset of field: TParser::token"][::std::mem::offset_of!(TParser, token) - 52usize];
};
unsafe extern "C" {
    pub fn get_token(pst: *mut TParser) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn init_parser(pst: *mut TParser, str_: *mut jchar, len: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn new_parser() -> TParser;
}
